--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "Brian Holt <btholt@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "reptar build",
+    "serve": "reptar serve"
   },
   "keywords": [],
   "dependencies": {
+    "reptar": "^3.3.1",
     "reptar-excerpt": "^0.8.0",
     "reptar-html-minifier": "^0.7.0",
     "reptar-theme-thread": "^0.3.3"
