--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "emotion": "^9.2.3",
+    "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-emotion": "^9.2.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   }
