--- a/.babelrc
+++ b/.babelrc
@@ -12,5 +12,13 @@
       }
     ]
   ],
-  "plugins": ["babel-plugin-transform-class-properties"]
+  "plugins": ["babel-plugin-transform-class-properties"],
+  "env": {
+    "test": {
+      "plugins": ["babel-plugin-transform-es2015-modules-commonjs"]
+    },
+    "development": {
+      "plugins": ["react-hot-loader/babel"]
+    }
+  }
 }
